--- a/src/styles/PageDirector.css
+++ b/src/styles/PageDirector.css
@@ -312,7 +312,7 @@ body {
 }
 
 .director-section-content {
-    background-color: rgba(255, 255, 255, 0.9);
+    background: linear-gradient(to bottom right, #ffffff, #f3f7fa);
     border-radius: 10px;
     padding: 20px;
     margin: 10px 0;
@@ -324,14 +324,6 @@ body {
     position: relative;
     z-index: 5;
     top: 10%;
-}
-
-.director-section-content h2 {
-    color: #14213d;
-    border-bottom: 2px solid #14213d;
-    padding-bottom: 10px;
-    margin-top: 0;
-    margin-bottom: 15px;
 }
 
 .director-welcome-content {
@@ -371,7 +363,7 @@ body {
 
 .director-content-area>div {
     width: 100%;
-    max-width: 1000px;
+    max-width: 1100px;
     z-index: 5;
 }
 
@@ -998,11 +990,14 @@ button:disabled {
 }*/
 
 .director-section-content h2 {
-    color: #14213d;
-    border-bottom: 2px solid #14213d;
+    color: #034081;
+    border-bottom: 2px solid #d81020;
     padding-bottom: 10px;
-    margin-top: 0;
-    margin-bottom: 15px;
+    margin-top: 10px;
+    margin-bottom: 25px;
+    font-size: 2.2rem;
+    text-align: center;
+    
 }
 
 @media (max-width: 768px) {
@@ -1330,28 +1325,31 @@ button:disabled {
     margin: 20px 0;
 }
 
-.director-horarios-sin-horarios { 
-    text-align: center; 
-    padding: 30px; 
-    background-color: #f5f5f5; 
-    border-radius: 10px; 
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); 
-    margin: 20px 0; 
+.director-horarios-sin-horarios {
+  text-align: center;
+  padding: 40px 20px;
+  background: linear-gradient(135deg, #ffffff, #f5f5f5);
+  border-radius: 15px;
+  box-shadow: 0 8px 24px rgb(9, 58, 131);
+  margin: 30px auto;
+  max-width: 600px;
+  transition: all 0.3s ease;
+}
+
+.director-horarios-sin-horarios:hover {
+  transform: scale(1.01);
 }
 
 .director-horarios-sin-horarios p {
-    font-size: 1.2rem;
-    color: #14213d;
-    border-bottom: 2px solid #14213d;
-    padding-bottom: 10px;
-    margin-bottom: 30px;
-    font-weight: bold;
-    width: 80%; /* Cambia este valor según lo necesites */
-    max-width: 500px; /* Opcional: establece un ancho máximo */
-    text-align: center;
-    margin-left: 200px;
-    
+  font-size: 1.3rem;
+  color: #14213d;
+  padding-bottom: 12px;
+  margin-bottom: 30px;
+  font-weight: bold;
+  max-width: 500px;
+  margin: 0 auto 30px;
 }
+
 
 .mensaje-horarios {
     margin-top: 15px;
